// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly 1`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.latest_version
    </strong>
    <ForwardRef(Link)
      className="spacer-left medium"
      target="_blank"
      to="https://www.sonarqube.org/whats-new/?referrer=sonarqube"
    >
      system.see_whats_new
    </ForwardRef(Link)>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={
      [
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.6 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-04-02",
          "version": "5.6.6",
        },
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.5 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-03-01",
          "version": "5.6.5",
        },
      ]
    }
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/community"
      href="http://download.url/community"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;

exports[`should display correctly 2`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.lts_version
    </strong>
    <ForwardRef(Link)
      className="spacer-left medium"
      target="_blank"
      to="https://www.sonarqube.org/whats-new/?referrer=sonarqube"
    >
      system.see_whats_new
    </ForwardRef(Link)>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={
      [
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.6 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-04-02",
          "version": "5.6.6",
        },
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.5 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-03-01",
          "version": "5.6.5",
        },
      ]
    }
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/community"
      href="http://download.url/community"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;

exports[`should display correctly 3`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.latest_patch
    </strong>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={
      [
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.6 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-04-02",
          "version": "5.6.6",
        },
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.5 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-03-01",
          "version": "5.6.5",
        },
      ]
    }
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/community"
      href="http://download.url/community"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;

exports[`should display correctly 4`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.latest_version
    </strong>
    <ForwardRef(Link)
      className="spacer-left medium"
      target="_blank"
      to="https://www.sonarqube.org/whats-new/?referrer=sonarqube"
    >
      system.see_whats_new
    </ForwardRef(Link)>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={
      [
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.6 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-04-02",
          "version": "5.6.6",
        },
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.5 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-03-01",
          "version": "5.6.5",
        },
      ]
    }
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/developer"
      href="http://download.url/developer"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;

exports[`should display correctly 5`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.latest_version
    </strong>
    <ForwardRef(Link)
      className="spacer-left medium"
      target="_blank"
      to="https://www.sonarqube.org/whats-new/?referrer=sonarqube"
    >
      system.see_whats_new
    </ForwardRef(Link)>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={
      [
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.6 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-04-02",
          "version": "5.6.6",
        },
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.5 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-03-01",
          "version": "5.6.5",
        },
      ]
    }
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/enterprise"
      href="http://download.url/enterprise"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;

exports[`should display correctly 6`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.latest_version
    </strong>
    <ForwardRef(Link)
      className="spacer-left medium"
      target="_blank"
      to="https://www.sonarqube.org/whats-new/?referrer=sonarqube"
    >
      system.see_whats_new
    </ForwardRef(Link)>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={
      [
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.6 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-04-02",
          "version": "5.6.6",
        },
        {
          "changeLogUrl": "http://changelog.url/",
          "description": "Version 5.6.5 description",
          "downloadDeveloperUrl": "http://download.url/developer",
          "downloadUrl": "http://download.url/community",
          "releaseDate": "2017-03-01",
          "version": "5.6.5",
        },
      ]
    }
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/datacenter"
      href="http://download.url/datacenter"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;

exports[`should display correctly 7`] = `
<div
  className="system-upgrade-version it__upgrade-list-item"
>
  <h3
    className="h1 spacer-bottom"
  >
    <strong>
      system.latest_version
    </strong>
    <ForwardRef(Link)
      className="spacer-left medium"
      target="_blank"
      to="https://www.sonarqube.org/whats-new/?referrer=sonarqube"
    >
      system.see_whats_new
    </ForwardRef(Link)>
  </h3>
  <p>
    <FormattedMessage
      defaultMessage="system.version_is_availble"
      id="system.version_is_availble"
      values={
        {
          "version": <b>
            SonarQube 
            5.6.7
          </b>,
        }
      }
    />
  </p>
  <p
    className="spacer-top"
  >
    Version 5.6.7 description
  </p>
  <div
    className="big-spacer-top"
  >
    <DateFormatter
      date="2017-03-01"
      long={true}
    >
      <Component />
    </DateFormatter>
    <ForwardRef(Link)
      className="spacer-left"
      target="_blank"
      to="http://changelog.url/"
    >
      system.release_notes
    </ForwardRef(Link)>
  </div>
  <SystemUpgradeIntermediate
    className="spacer-top"
    upgrades={[]}
  />
  <div
    className="big-spacer-top"
  >
    <a
      className="button"
      download="http://download.url/community"
      href="http://download.url/community"
      rel="noopener noreferrer"
      target="_blank"
    >
      system.download_x.5.6.7
    </a>
    <withAppStateContext(DocLink)
      className="spacer-left"
      to="/setup-and-upgrade/upgrade-the-server/upgrade-guide/"
    >
      system.how_to_upgrade
    </withAppStateContext(DocLink)>
  </div>
</div>
`;
